<resources>
    <string name="app_name">ProvaVinhos</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="clients">Clients</string>
    <string name="wine">Wine</string>
    <string name="sales">Sales</string>
    <string name="title">Barros Wine House</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="field_mandatory">Mandatory field</string>
    <string name="pw_incorrect">Incorrect password</string>
    <string name="usr_incorrect">Incorrect username</string>
    <string name="name">Name</string>
    <string name="region">Region</string>
    <string name="year">Year</string>
    <string name="stock">Stock</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="mobile">Mobile Number</string>
    <string name="postal">Postal Code</string>
    <string name="social">Social Security Number</string>
    <string name="client_name">Client\'s name</string>
    <string name="bottles">Number of bottles</string>
    <string name="price">Price (IVA included)</string>
    <string name="nome_vinho">Wine\'s name</string>
    <string name="logo">Logo</string>
    <string name="price_per_bottle">Price per bottle</string>
    <string name="nexistevinho">This wine doesn\'t exist, try create instead</string>
    <string name="nexistecliente">This client doesn\'t exist, try create instead</string>
    <string name="nexistevenda">This sale doesn\'t exist, try create instead</string>
    <string name="list">List them all</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="title_activity_main">Barros Wine House</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_client">Delete Client</string>
    <string name="delete_wine">Delete Wine</string>
    <string name="delete_sale">Delete Sale</string>
    <string name="inserir_client_label">Insert Client</string>
    <string name="inserir_wine_label">Insert Wine</string>
    <string name="inserir_sale_label">Insert Sale</string>
    <string name="campo_obrigatorio">Mandatory Field</string>
    <string name="done">Done</string>
    <string name="erro">Error</string>
    <string name="insere_cliente">Insert Client</string>
    <string name="edit_client">Edit Client</string>
    <string name="sure">"Are you sure you want to delete ? "</string>
    <string name="edit_wine">Edit Wine</string>
    <string name="insert_wine">Insert Wine</string>
    <string name="menu_principal">"Main Menu "</string>
    <string name="name_wine">Wine\'s name</string>
</resources>